--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,4 +1,22 @@
 body {
-    margin: 16px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  margin: 16px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+main {
+  margin-top: 64px;
+  padding: 16px;
+}
+
+.demo-group, .demo-group-spaced {
+  display: flex;
+  align-items: center;
+}
+
+.demo-group-spaced {
+  justify-content: space-around;
+}
+
+.demo-group > *, .demo-group-spaced > * {
+  margin: 0 8px;
 }
