--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,6 +1,6 @@
 body {
   margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  font-family: Roboto;
 }
 
 main {
